--- a/views/authorization.html
+++ b/views/authorization.html
@@ -6,12 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./css/bootstrap.css" rel="stylesheet">
+    <script src="./js/requests.js"></script>
+    <script src="./js/auth.js"></script>
     <title>Главная</title>
 </head>
 <body>
 
         <nav class="navbar navbar-light bg-light">
-
             <a class="navbar-brand" style="margin-left: 30px">
                 <img src="./img/logo_BNTU.png" width=70 class="d-inline-block align-top" href="./index.html"  alt="Логотип БНТУ">
             </a>
@@ -20,7 +21,7 @@
             <a class="nav-link active" aria-current="page" href="#">Университет</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Столовые</a>
+            <a class="nav-link" href="./canteens.html">Столовые</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Деканат</a>
@@ -37,14 +38,14 @@
 <form>
   <!-- Email input -->
   <div class="form-outline mb-4">
-    <input type="email" id="form2Example1" class="form-control" />
-    <label class="form-label" for="form2Example1">Email address</label>
+    <input type="email" id="login_field" class="form-control" />
+    <label class="form-label" for="login_field">Email address</label>
   </div>
 
   <!-- Password input -->
   <div class="form-outline mb-4">
-    <input type="password" id="form2Example2" class="form-control" />
-    <label class="form-label" for="form2Example2">Password</label>
+    <input type="password" id="password_field" class="form-control" />
+    <label class="form-label" for="password_field">Password</label>
   </div>
 
   <!-- 2 column grid layout for inline styling -->
@@ -59,12 +60,9 @@
   </div>
 
   <!-- Submit button -->
-  <button type="button" class="btn btn-primary btn-block mb-4">Sign in</button>
+  <button type="button" class="btn btn-primary btn-block mb-4" onclick="auth()">Sign in</button>
 
 </form>
 </div>
-
-
-
 </body>
 </html>
