--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="./css/bootstrap.css" rel="stylesheet">
+    <script src="./js/requests.js"></script>
+    <script src="./js/mainRedirect.js"></script>
     <title>Главная</title>
 </head>
 <body>
@@ -30,11 +32,5 @@
           </li>
         </ul>
         </nav>
-
-
-
-
-
-
 </body>
 </html>
