--- a/views/student.html
+++ b/views/student.html
@@ -1,45 +1,140 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="./css/bootstrap.css" rel="stylesheet">
     <script src="./js/logout.js"></script>
     <script src="./js/requests.js"></script>
     <script src="./js/student.js"></script>
-    <title>Document</title>
+    <title>Главная</title>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="main_logo_student">
-            <div class="header_student container">
-                <a href="/"><div class="logo"><img src="./img/logo_BNTU.png" alt=""></div></a>
-                <div class="menu">
-                    <a href="/"><div>Faculty</div></a>
-                    <a href="/"><div>Lecturers</div></a>
-                    <a href="/"><div>Сanteen</div></a>
-                    <a href="/"><div>Timetable</div></a>
-                    <a onclick="logout()"><div>Log out</div></a>
-                </div>
+
+        <nav class="navbar navbar-light bg-light">
+
+            <a class="navbar-brand" href="/" style="margin-left: 30px">
+                <img src="./img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
+            </a>
+            <ul class="nav justify-content-end">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="./faculties.html">Университет</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./canteens.html">Столовые</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Деканат</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="logout()">Выйти</a>
+          </li>
+        </ul>
+        </nav>
+
+                <div class="d-flex flex-row" style="max-width: 400px; border: solid; margin-left: 50px">
+          <div class="p-2">
+              <div class="container px-4 text-center">
+          <div class="row gx-5">
+            <div class="col">
+             <img src="./img/ded.png" id="student_avatar" width="100px">
             </div>
-            <div class="main_logo__center_student">
-                <div class="information">
-                    <div class="information__photo">
-                        <div class="photo"><img id="avatarImage" src="./img/ded.png" alt=""></div>
-                    </div>
-                    <div class="information__info">
-                        <div class="name" id="student_name">name surname</div>
-                        <div class="group" id="student_group">group</div>
-                    </div>
-                </div>
-                <div class="posts">
-                    <div class="post1">post1</div>
-                    <div class="post2">post2</div>
-                    <div class="post3">post3</div>
-                </div>
+            <div class="col">
+              <div class="p-3" id="student_data"></div>
             </div>
+          </div>
         </div>
+          </div>
+        </div>
+
+<div class="container overflow-hidden text-center">
+  <div class="row gx-5">
+    <div class="col">
+     <div class="p-3">
+         <h2>Расписание</h2>
+   <table>
+  <tr>
+    <th>Сегодня</th>
+    <th>Завтра</th>
+    <th>Послезавтра</th>
+  </tr>
+       <tr>
+    <th>Диплом</th>
+    <th>Диплом</th>
+    <th>Диплом</th>
+  </tr>
+       <tr>
+    <th>Диплом</th>
+    <th>Диплом</th>
+    <th>Диплом</th>
+  </tr>
+</table>
+     </div>
     </div>
+    <div class="col">
+      <div class="p-3">
+          <h2>Лента</h2>
+          <div class="d-flex flex-row" style="max-width: 400px; border: solid; margin-left: 50px">
+              <div class="p-2">
+                <div class="container px-4 text-center">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <img src="./img/polozkov.jpg" width="100px">
+                        </div>
+                    <div class="col">
+                <div class="p-3">
+                  <p>Всем прийти на пару, а то убью нахуй</p>
+                  <p><i>(с) Полозков</i></p>
+                </div>
+                </div>
+          </div>
+        </div>
+          </div>
+        </div>
+              <br>
+
+          <div class="d-flex flex-row" style="max-width: 400px; border: solid 1px; margin-left: 50px">
+              <div class="p-2">
+                <div class="container px-4 text-center">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <img src="./img/sidorik.jpg" width="100px">
+                        </div>
+                    <div class="col">
+                <div class="p-3">
+                  <p>Кислицин, где ваш диплом?</p>
+                  <p><i>(с) Сидорик</i></p>
+                </div>
+                </div>
+          </div>
+    </div>
+  </div>
+</div>
+
+<br>
+                    <div class="d-flex flex-row" style="max-width: 400px; border: solid; margin-left: 50px">
+              <div class="p-2">
+                <div class="container px-4 text-center">
+                    <div class="row gx-5">
+                        <div class="col">
+                            <img src="./img/polozkov.jpg" width="100px">
+                        </div>
+                    <div class="col">
+                <div class="p-3">
+                  <p>Напоминаю, 1 июня комиссия, вам пиздец</p>
+                  <p><i>(с) Полозков</i></p>
+                </div>
+                </div>
+          </div>
+        </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
