--- a/views/index.html
+++ b/views/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link" href="#">Деканат</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./authorization.html">Войти</a>
+            <a class="nav-link" href="./auth">Войти</a>
           </li>
         </ul>
         </nav>
