--- a/views/teacher_view.html
+++ b/views/teacher_view.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta charset="UTF-8">
     <title>Новый пост</title>
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/post.css" rel="stylesheet">
-    <script src="./js/logout.js"></script>
-    <script src="./js/requests.js"></script>
-    <script src="./js/student.js"></script>
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/post.css" rel="stylesheet">
+    <script src="/js/logout.js"></script>
+    <script src="/js/requests.js"></script>
+    <script src="/js/teacher_view.js"></script>
 </head>
 <body>
         <nav class="navbar navbar-light bg-light">
 
             <a class="navbar-brand" href="/" style="margin-left: 30px">
-                <img src="./img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
+                <img src="/img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./faculties.html">Университет</a>
+            <a class="nav-link active" aria-current="page" href="/faculties.html">Университет</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./canteens.html">Столовые</a>
+            <a class="nav-link" href="/canteens.html">Столовые</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Деканат</a>
@@ -70,16 +70,10 @@
                 <h6 class="mb-3">Основная информация</h6>
                 <table class="table">
                     <tbody>
-                         <tr>
-                            <td><strong>ID:</strong></td>
-                            <td>
-                                <p class="text-muted mb-0" id="student_id"></p>
-                            </td>
-                        </tr>
                         <tr>
-                            <td><strong>Группа:</strong></td>
+                            <td><strong>Должность:</strong></td>
                             <td>
-                                <p class="text-muted mb-0" id="user_group"></p>
+                                <p class="text-muted mb-0" id="user_job_title"></p>
                             </td>
                         </tr>
                         <tr>
@@ -92,12 +86,6 @@
                             <td><strong>Кафедра:</strong></td>
                             <td>
                                 <p class="text-muted mb-0" id="user_department"></p>
-                            </td>
-                        </tr>
-                         <tr>
-                            <td><strong>Курс:</strong></td>
-                            <td>
-                                <p class="text-muted mb-0" id="user_course"></p>
                             </td>
                         </tr>
                     </tbody>
