--- a/views/authorization.html
+++ b/views/authorization.html
@@ -5,23 +5,23 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <script src="./js/requests.js"></script>
-    <script src="./js/auth.js"></script>
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <script src="/js/requests.js"></script>
+    <script src="/js/auth.js"></script>
     <title>Главная</title>
 </head>
 <body>
 
         <nav class="navbar navbar-light bg-light">
             <a class="navbar-brand" style="margin-left: 30px">
-                <img src="./img/logo_BNTU.png" width=70 class="d-inline-block align-top" href="./index.html"  alt="Логотип БНТУ">
+                <img src="/img/logo_BNTU.png" width=70 class="d-inline-block align-top" href="/"  alt="Логотип БНТУ">
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Университет</a>
+            <a class="nav-link active" aria-current="page" href="/faculties">Университет</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./canteens.html">Столовые</a>
+            <a class="nav-link" href="/canteens">Столовые</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Деканат</a>
