--- a/views/index.html
+++ b/views/index.html
@@ -14,12 +14,12 @@
 
         <nav class="navbar navbar-light bg-light">
 
-            <a class="navbar-brand" href="./index.html" style="margin-left: 30px">
-                <img src="./img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
+            <a class="navbar-brand" href="/" style="margin-left: 30px">
+                <img src="/img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./faculties.html">Университет</a>
+            <a class="nav-link active" aria-current="page" href="/faculties">Университет</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Столовые</a>
@@ -28,7 +28,7 @@
             <a class="nav-link" href="#">Деканат</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./auth">Войти</a>
+            <a class="nav-link" href="/auth">Войти</a>
           </li>
         </ul>
         </nav>
