--- a/views/departments.html
+++ b/views/departments.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="/css/bootstrap.css" rel="stylesheet">
     <script src="/js/requests.js"></script>
-    <script src="/js/faculties.js"></script>
+    <script src="/js/departments.js"></script>
     <title>Главная</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="/faculties">Университет</a>
+            <a class="nav-link active" aria-current="page" href="/faculties.html">Университет</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/canteens.html">Столовые</a>
@@ -33,12 +33,8 @@
         </ul>
         </nav>
 
-        <div class="container text-center">
-          <h1>Столовые БНТУ</h1>
-        </div>
 
-
-        <div id="faculties">
+        <div id="faculties" class="container text-center">
             <div class="container text-center" style="border: solid 1px; margin-top: 25px">
   <div class="row g-2">
     <div class="col-6">
@@ -46,9 +42,9 @@
     </div>
     <div class="col-6">
       <div class="p-3">
-          <h5>Супер столовая</h5>
-          <p>Реально столовая</p>
-          <p>Описание настоящей столоной</p>
+          <h5>Факультет информационныхе технологий и робототехники</h5>
+          <p>ФИТР</p>
+          <p>Описание</p>
       </div>
     </div>
   </div>
@@ -57,7 +53,22 @@
 
 
 
-
+        <div id="departments" style="max-width: 800px" class="container text-center">
+<div class="container text-center" style="border: solid 1px; margin-top: 25px">
+<div class="row g-2">
+<div class="col-6">
+<img src="/img/bntu_main.png" width="200px" style="margin-top: 10px">
+</div>
+<div class="col-6">
+<div class="p-3">
+<h5>Кафедра такая-то</h5>
+<p>ПОИСиТ</p>
+<p>Описание</p>
+</div>
+</div>
+</div>
+</div>
+        </div>
 
 
 
