--- a/views/faculties.html
+++ b/views/faculties.html
@@ -5,9 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <script src="./js/requests.js"></script>
-    <script src="./js/faculties.js"></script>
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <script src="/js/requests.js"></script>
+    <script src="/js/faculties.js"></script>
     <title>Главная</title>
 </head>
 <body>
@@ -15,14 +15,14 @@
         <nav class="navbar navbar-light bg-light">
 
             <a class="navbar-brand" href="/" style="margin-left: 30px">
-                <img src="./img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
+                <img src="/img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./faculties.html">Университет</a>
+            <a class="nav-link active" aria-current="page" href="/faculties.html">Университет</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./canteens.html">Столовые</a>
+            <a class="nav-link" href="/canteens.html">Столовые</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Деканат</a>
@@ -42,7 +42,7 @@
             <div class="container text-center" style="border: solid 1px; margin-top: 25px">
   <div class="row g-2">
     <div class="col-6">
-      <img src="./img/bntu_main.png" width="400px" style="margin-top: 10px">
+      <img src="/img/bntu_main.png" width="400px" style="margin-top: 10px">
     </div>
     <div class="col-6">
       <div class="p-3">
