--- a/views/groups.html
+++ b/views/groups.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="/css/bootstrap.css" rel="stylesheet">
     <script src="/js/requests.js"></script>
-    <script src="/js/faculties.js"></script>
+    <script src="/js/group.js"></script>
     <title>Главная</title>
 </head>
 <body>
@@ -19,7 +19,7 @@
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="/faculties">Университет</a>
+            <a class="nav-link active" aria-current="page" href="/faculties.html">Университет</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/canteens.html">Столовые</a>
@@ -33,12 +33,8 @@
         </ul>
         </nav>
 
-        <div class="container text-center">
-          <h1>Столовые БНТУ</h1>
-        </div>
 
-
-        <div id="faculties">
+        <div id="department">
             <div class="container text-center" style="border: solid 1px; margin-top: 25px">
   <div class="row g-2">
     <div class="col-6">
@@ -46,15 +42,32 @@
     </div>
     <div class="col-6">
       <div class="p-3">
-          <h5>Супер столовая</h5>
-          <p>Реально столовая</p>
-          <p>Описание настоящей столоной</p>
+          <h5>Кафедра кафедра кафедра</h5>
+          <p>Поисит</p>
+          <p>Описание</p>
       </div>
     </div>
   </div>
 </div>
         </div>
 
+
+  <div id="groups" class="container text-center" style="max-width: 400px">
+            <div class="container text-center" style="border: solid 1px; margin-top: 25px">
+  <div class="row g-2">
+          <div class="col-6">
+      <div class="p-3">
+          <a href="/group/1"><h5><b>10702119</b></h5></a>
+      </div>
+    </div>
+    <div class="col-6">
+      <div class="p-3">
+          <a href="/users/123"><h6>Алексей</h6></a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 
 
