--- a/views/student.html
+++ b/views/student.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta charset="UTF-8">
     <title>Новый пост</title>
-    <link href="./css/bootstrap.css" rel="stylesheet">
-    <link href="./css/post.css" rel="stylesheet">
-    <script src="./js/logout.js"></script>
-    <script src="./js/requests.js"></script>
-    <script src="./js/student.js"></script>
+    <link href="/css/bootstrap.css" rel="stylesheet">
+    <link href="/css/post.css" rel="stylesheet">
+    <script src="/js/logout.js"></script>
+    <script src="/js/requests.js"></script>
+    <script src="/js/student.js"></script>
 </head>
 <body>
         <nav class="navbar navbar-light bg-light">
 
             <a class="navbar-brand" href="/" style="margin-left: 30px">
-                <img src="./img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
+                <img src="/img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./faculties.html">Университет</a>
+           <a class="nav-link active" aria-current="page" href="/faculties.html">Университет</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./canteens.html">Столовые</a>
+            <a class="nav-link" href="/canteens.html">Столовые</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Деканат</a>
