--- a/views/teacher.html
+++ b/views/teacher.html
@@ -18,7 +18,7 @@
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="./faculties.html">Университет</a>
+            <a class="nav-link active" aria-current="page" href="./faculties">Университет</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./canteens.html">Столовые</a>
