--- a/views/group.html
+++ b/views/group.html
@@ -6,9 +6,7 @@
     <title>Новый пост</title>
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/post.css" rel="stylesheet">
-    <script src="/js/logout.js"></script>
-    <script src="/js/requests.js"></script>
-    <script src="/js/group.js"></script>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
         <nav class="navbar navbar-light bg-light">
@@ -32,7 +30,7 @@
         </ul>
         </nav>
 
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
 <div class="container">
 <div class="profile-wrapper">
     <div class="profile-section-user">
@@ -74,7 +72,32 @@
                     </tbody>
                 </table>
             </div>
-            <!-- /.profile-info-general -->
 
+    </div>
+    
+    <table class="tablebuddy">
+        <caption>Personal information</caption>
+         <tr>
+          <td colspan="2" class="identical">ID</td>
+          <th scope="col">Имя фамилия</th>
+          <th scope="col">Телефон</th>
+         </tr>
+         <tr>
+          <th colspan="2" scope="row">1070211908</th>
+          <td>Данила Кислицин</td>
+          <td>+375293866916</td>
+         </tr>
+         <tr>
+          <th colspan="2" scope="row">0125478515</th>
+          <td>Артём Нестеренко</td>
+          <td>+375293867800</td>
+         </tr>
+         
+     </table>
+
+            <!-- /.profile-info-general -->
+            <script src="/js/logout.js"></script>
+            <script src="/js/requests.js"></script>
+            <script src="/js/group.js"></script>
 </body>
 </html>
