--- a/views/css/post.css
+++ b/views/css/post.css
@@ -11,10 +11,11 @@
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
+    -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column
+    -ms-flex-direction: row;
+    flex-direction: row;
+    gap: 150px;
 }
 
 @media (min-width:768px) {
@@ -35,6 +36,7 @@ body.menubar-top .profile-wrapper {
     -webkit-box-flex: 0;
     -ms-flex: 0 0 100%;
     flex: 0 0 100%
+    
 }
 
 @media (min-width:768px) {
@@ -310,4 +312,45 @@ body.menubar-top .profile-wrapper {
     position: absolute;
     right: 32px;
     bottom: 32px
+}
+
+html {
+    font-family: sans-serif;
+}
+
+table {
+    border-collapse: collapse;
+    border: 2px solid rgb(200,200,200);
+    letter-spacing: 1px;
+    font-size: 0.8rem;
+}
+td, th {
+    border: 1px solid rgb(190,190,190);
+    padding: 10px 20px;
+}
+
+th {
+    background-color: rgb(235,235,235);
+}
+td {
+    text-align: center;
+}  
+tr:nth-child(even) td {
+    background-color: rgb(250,250,250);
+}
+
+tr:nth-child(odd) td {
+    background-color: rgb(245,245,245);
+}
+
+caption {
+    padding: 10px;
+}
+
+.tablebuddy {
+    margin-top: 75px;
+}
+
+.identical {
+    font-weight: 700;
 }
