--- a/views/css/post.css
+++ b/views/css/post.css
@@ -354,3 +354,14 @@ caption {
 .identical {
     font-weight: 700;
 }
+
+.post_post img{
+    margin-bottom: 20px;
+}
+
+.post_post {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
