--- a/views/group.html
+++ b/views/group.html
@@ -7,6 +7,9 @@
     <link href="/css/bootstrap.css" rel="stylesheet">
     <link href="/css/post.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="/js/logout.js"></script>
+    <script src="/js/requests.js"></script>
+    <script src="/js/group.js"></script>
 </head>
 <body>
         <nav class="navbar navbar-light bg-light">
@@ -75,29 +78,17 @@
 
     </div>
     
-    <table class="tablebuddy">
-        <caption>Personal information</caption>
-         <tr>
-          <td colspan="2" class="identical">ID</td>
-          <th scope="col">Имя фамилия</th>
-          <th scope="col">Телефон</th>
-         </tr>
-         <tr>
-          <th colspan="2" scope="row">1070211908</th>
-          <td>Данила Кислицин</td>
-          <td>+375293866916</td>
-         </tr>
-         <tr>
-          <th colspan="2" scope="row">0125478515</th>
-          <td>Артём Нестеренко</td>
-          <td>+375293867800</td>
-         </tr>
-         
+    <table class="tablebuddy" id="group_students">
+<tr>
+<td colspan="2" class="identical">ID</td>
+<th scope="col">Имя фамилия</th>
+<th scope="col">Телефон</th>
+</tr>
+
+
+
      </table>
 
             <!-- /.profile-info-general -->
-            <script src="/js/logout.js"></script>
-            <script src="/js/requests.js"></script>
-            <script src="/js/group.js"></script>
 </body>
 </html>
