--- a/views/canteens.html
+++ b/views/canteens.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="/css/bootstrap.css" rel="stylesheet">
     <script src="/js/requests.js"></script>
-    <script src="/js/faculties.js"></script>
+    <script src="/js/canteens.js"></script>
     <title>Главная</title>
 </head>
 <body>
