--- a/views/canteens.html
+++ b/views/canteens.html
@@ -12,26 +12,26 @@
 </head>
 <body>
 
-        <nav class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-light bg-light">
 
-            <a class="navbar-brand" href="/" style="margin-left: 30px">
-                <img src="/img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
-            </a>
-            <ul class="nav justify-content-end">
-          <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="/faculties">Университет</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/canteens.html">Столовые</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Деканат</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" onclick="logout()">Выйти</a>
-          </li>
-        </ul>
-        </nav>
+    <a class="navbar-brand" href="/" style="margin-left: 30px">
+        <img src="/img/logo_BNTU.png" width=70 class="d-inline-block align-top" alt="Логотип БНТУ">
+    </a>
+    <ul class="nav justify-content-end">
+  <li class="nav-item">
+   <a class="nav-link active" aria-current="page" href="/faculties">Университет</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/canteens">Столовые</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="/dean's_office">Деканат</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" onclick="logout()">Выйти</a>
+  </li>
+</ul>
+</nav>
 
         <div class="container text-center">
           <h1>Столовые БНТУ</h1>
