--- a/views/student.html
+++ b/views/student.html
@@ -18,13 +18,13 @@
             </a>
             <ul class="nav justify-content-end">
           <li class="nav-item">
-           <a class="nav-link active" aria-current="page" href="/faculties.html">Университет</a>
+           <a class="nav-link active" aria-current="page" href="/faculties">Университет</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/canteens.html">Столовые</a>
+            <a class="nav-link" href="/canteens">Столовые</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Деканат</a>
+            <a class="nav-link" href="/dean's_office">Деканат</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" onclick="logout()">Выйти</a>
