navbar fix issues

--- a/views/canteen_worker.html
+++ b/views/canteen_worker.html
@@ -6,6 +6,7 @@
     <title>Новый пост</title>
     <link href="./css/bootstrap.css" rel="stylesheet">
     <link href="./css/post.css" rel="stylesheet">
+    <script src="/js/logout.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
@@ -22,7 +23,7 @@
     <a class="nav-link" href="/canteens">Столовые</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/dean's_office">Деканат</a>
+    <a class="nav-link" href="/deans-office">Деканат</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" onclick="logout()">Выйти</a>
