--- a/views/group.html
+++ b/views/group.html
@@ -25,7 +25,7 @@
         <a class="nav-link" href="/canteens">Столовые</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/dean's_office">Деканат</a>
+        <a class="nav-link" href="/deans-office">Деканат</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" onclick="logout()">Выйти</a>
