--- a/views/canteens.html
+++ b/views/canteens.html
@@ -8,6 +8,7 @@
     <link href="/css/bootstrap.css" rel="stylesheet">
     <script src="/js/requests.js"></script>
     <script src="/js/canteens.js"></script>
+    <script src="/js/logout.js"></script>
     <title>Главная</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
     <a class="nav-link" href="/canteens">Столовые</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/dean's_office">Деканат</a>
+    <a class="nav-link" href="/deans-office">Деканат</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" onclick="logout()">Выйти</a>
@@ -38,22 +39,26 @@
         </div>
 
 
-        <div id="faculties">
-            <div class="container text-center" style="border: solid 1px; margin-top: 25px">
-  <div class="row g-2">
-    <div class="col-6">
-      <img src="/img/bntu_main.png" width="400px" style="margin-top: 10px">
-    </div>
-    <div class="col-6">
-      <div class="p-3">
-          <h5>Супер столовая</h5>
-          <p>Реально столовая</p>
-          <p>Описание настоящей столоной</p>
-      </div>
-    </div>
-  </div>
+  <div id="canteens">
+  <div class="container text-center" style="border: solid 1px; margin-top: 25px">
+
+<div class="row g-2">
+<div class="col-6">
+<img src="/img/bntu_main.png" width="400px" style="margin-top: 10px">
 </div>
-        </div>
+<div class="col-6">
+<div class="p-3">
+<h5>Супер столовая</h5>
+<p>Реально столовая</p>
+<p>Описание настоящей столоной</p>
+</div>
+</div>
+</div>
+
+
+
+</div>
+</div>
 
 
 
