--- a/views/dean's_office.html
+++ b/views/dean's_office.html
@@ -8,6 +8,7 @@
     <link href="./css/bootstrap.css" rel="stylesheet">
     <script src="./js/requests.js"></script>
     <script src="./js/auth.js"></script>
+    <script src="/js/logout.js"></script>
     <title>Главная</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
         <a class="nav-link" href="/canteens">Столовые</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/dean's_office">Деканат</a>
+        <a class="nav-link" href="/deans-office">Деканат</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" onclick="logout()">Выйти</a>
