--- a/views/index.html
+++ b/views/index.html
@@ -25,10 +25,10 @@
     <a class="nav-link" href="/canteens">Столовые</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" href="/dean's_office">Деканат</a>
+    <a class="nav-link" href="/deans-office">Деканат</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" onclick="logout()">Выйти</a>
+    <a class="nav-link" href="/auth" onclick="auth()">Войти</a>
   </li>
 </ul>
 </nav>
