--- a/views/groups.html
+++ b/views/groups.html
@@ -33,8 +33,8 @@
 </ul>
 </nav>
 
-
-        <div id="department">
+      <div class="mainiel">
+        <div id="department" style="margin-bottom: 100px;">
             <div class="container text-center" style="border: solid 1px; margin-top: 25px">
   <div class="row g-2">
     <div class="col-6">
@@ -51,9 +51,12 @@
 </div>
         </div>
 
+        <input type="button" style="width: 100px; height: 30px; margin: 0 auto;">
 
-  <div id="groups" class="container text-center" style="max-width: 800px">
+        
+        <div id="groups" class="container text-center" style="max-width: 800px">
 <div class="container text-center" style="border: solid 1px; margin-top: 25px">
+
 <div class="row g-2">
 <div class="col-6">
 <div class="p-3">
@@ -66,15 +69,10 @@
 </div>
 </div>
 </div>
+
 </div>
-</div>
-
-
-
-
-
-
-
+        </div>
+      </div>
 
 </body>
 </html>
