--- a/views/student.html
+++ b/views/student.html
@@ -109,9 +109,23 @@
         <!-- /.hidden-sm-down -->
     </div>
     <!-- /.profile-section-user -->
+    
+
     <div class="profile-section-main">
         <!-- Nav tabs -->
-
+        <div class="profile-info-general p-4">
+            <h6 class="mb-3">Ведомости</h6>
+            <table class="table">
+                <tbody>
+                     <tr>
+                        <td><strong>Предмет</strong></td>
+                        <td><strong>Преподаватель</strong></td>
+                        <td><strong>Форма сдачи</strong></td>
+                        <td><strong>Срок действия</strong></td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <div class="tab-content profile-tabs-content">
             <div class="tab-pane active" id="profile-overview" role="tabpanel">
                 <div class="stream-posts" id="posts_container">
