dean's_office page js

--- a/views/groups.html
+++ b/views/groups.html
@@ -34,7 +34,7 @@
 </ul>
 </nav>
 
-      <div class="mainiel">
+      <div class="mainiel" style="display: flex; flex-direction: column; align-items: center;">
         <div id="department" style="margin-bottom: 100px;">
             <div class="container text-center" style="border: solid 1px; margin-top: 25px">
   <div class="row g-2">
@@ -52,7 +52,7 @@
 </div>
         </div>
 
-        <input type="button" style="width: 100px; height: 30px; margin: 0 auto;">
+        <input type="button" class="btn btn-primary btn-block mb-4" style="width: 150px; height: 30px; margin-bottom: 30px; line-height: 0px;" value="Преподаватели">
 
         
         <div id="groups" class="container text-center" style="max-width: 800px">
