--- a/views/canteen_worker.html
+++ b/views/canteen_worker.html
@@ -43,10 +43,10 @@
             <div class="tab-pane active" id="profile-overview" role="tabpanel">
                 <div class="post-editor post_post">
                        <div>
-                        <img src="../views/img/sidorik.jpg" width="200px" alt="">
+                        <img id="current_image" src="" width="300px" alt="">
                        </div>
                     <div class="d-flex">
-                        <button class="btn btn-success px-4 py-1" onclick="sendPost()">Отправить</button>
+                        <button class="btn btn-success px-4 py-1" onclick="sendMenu()">Отправить</button>
                         <button class="btn btn-success px-4 py-1" style="margin-left:10px" onclick="addFile()">Добавить фото</button>
                         <p id="files">
                         </p>
@@ -65,8 +65,8 @@
     <!-- /.profile-section-main -->
 </div>
 </div>
-    <script src="./js/logout.js"></script>
-    <script src="./js/requests.js"></script>
-    <script src="./js/teacher.js"></script>
+    <script src="/js/logout.js"></script>
+    <script src="/js/requests.js"></script>
+    <script src="/js/canteen_worker.js"></script>
 </body>
 </html>
