--- a/views/groups.html
+++ b/views/groups.html
@@ -52,7 +52,7 @@
 </div>
         </div>
 
-        <input type="button" class="btn btn-primary btn-block mb-4" style="width: 150px; height: 30px; margin-bottom: 30px; line-height: 0px;" value="Преподаватели">
+        <button id="switch_button" onclick="buttonTrigger()" class="btn btn-primary btn-block mb-4" style="width: 150px; height: 30px; margin-bottom: 30px; line-height: 0px;">Преподаватели</button>
 
         
         <div id="groups" class="container text-center" style="max-width: 800px">
