--- a/views/student.html
+++ b/views/student.html
@@ -116,7 +116,7 @@
         <div class="profile-info-general p-4">
             <h6 class="mb-3">Ведомости</h6>
             <table class="table">
-                <tbody>
+                <tbody id="retakes_table">
                      <tr>
                         <td><strong>Предмет</strong></td>
                         <td><strong>Преподаватель</strong></td>
