add background image

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <script src="./js/mainRedirect.js"></script>
     <title>Главная</title>
 </head>
-<body>
+<body style="background-image: url('/img/original.jpg') ">
 
   <nav class="navbar navbar-light bg-light">
 
