--- a/views/teacher.html
+++ b/views/teacher.html
@@ -106,7 +106,7 @@
                     <textarea name="post-field" id="post-field" class="post-field" placeholder="Завтра пара в 12:00"></textarea>
                     <div class="d-flex">
                         <button class="btn btn-success px-4 py-1" onclick="sendPost()">Отправить</button>
-                        <p style="margin-left: 50px">Scope:</p>
+                        <p style="margin-left: 50px">Группы:</p>
                         <input style="margin-left: 20px" id="scope">
                         <button class="btn btn-success px-4 py-1" style="margin-left:10px" onclick="addFile()">Файл</button>
                         <p id="files">
